--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"Место\" - интерактивный вебсайт, позволяющий пользователям делиться опытом своих путешествий. На данный момент проект находится в состоянии разработки. В нем уже была реализована возможность изменять данные профиля, интерактивно добавлять или удалять места, ставить лайки и изменять фотографию в профиле. В ходе разработки были задействованы такие технологии, как:",
   "main": "./pages/index.js",
   "scripts": {
-    "build": "rm -rf dist && webpack --mode production",
+    "build": "rmdir /s /q dist && webpack --mode production",
     "dev": "webpack serve"
   },
     "repository": {
